Revert "explicitly set z-index on app-content, fix overlap from navigation"
This reverts commit 71e5bc180399e75af7b67b4187c19d94b5586a5f.

--- a/core/css/apps.css
+++ b/core/css/apps.css
@@ -410,7 +410,6 @@
 	position: relative;
 	height: 100%;
 	overflow-y: auto;
-	z-index: 100;
 }
 
 #app-content-wrapper {
@@ -556,3 +555,4 @@ em {
 	z-index:500;
 	padding:16px;
 }
+
